- Added support for using the new PARAMETERS I_S view when running against
  a 6.0 server    
- Fixed bug with the membership provider where the min non alpha numeric option
  was not working correctly.    
- Fixed bug where calling GetPassword on a membership user when the password answer
  is null would cause an exception (bug #35332)
    
Version 5.2.1 - 2/27/2008
- Tons of fixes in providers.  The actually work now.  :)
- Fixed new parameter handling code so that procedures and functions now work 
  (bug #34699)
- Fixed problem with Visual Studio 2008 integration that caused popup menus on
  server explorer nodes to not function
- Fixed web providers so that they don't attempt to check their schema or cache
  their application id if the connection string has not been set. (bug #34451)
- Fixed installer that did not install the DDEX provider binary if 
  the Visual Studio 2005 component was not selected. (bug #34674)
- Fixed password validation logic for creating users and changing passwords.
  It actually works now.  (bug #34792)

Version 5.2 - 2/11/2008
. Added ClearPool and ClearAllPools features
. DDEX provider now works under Visual Studio 2008	
. Added support for DbDataAdapter UpdateBatchSize.  Batching is fully supported
  including collapsing inserts down into the multi-value form if possible.
. Added MySqlScript class for executing scripts against a database.
. Marked connection string option 'Use Old Syntax' as obsolete and changed code to 
  allow both @ and ? as paramter markers.
. Finished MySqlBulkLoader class
. BINARY(16) columns are now returned as Guid objects
. Moved code that creates the PerfMon stuff from the assemblies to the Wix installer
. Added Allow User Variables connection string option so that users can use user variables
  without getting missing parameter exceptions
  
Version 5.1.6 
 - Fixed problem where parameters lists were not showing when you tried to alter a routine 
   in server explorer.  (bug #34359)