@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.web>
+    <machineKey
+      validationKey="AutoGenerate"
+      decryptionKey="ABAA84D7EC4BB56D75D217CECFFB9628809BDB8BF91CFCD64568A145BE59719F"
+      validation="SHA1" decryption="AES"/>
+
     <profile defaultProvider="MySqlProfileProvider">
       <providers>
         <clear/>
