@@ -14,6 +14,8 @@ Version 5.2.2 -
   was not working correctly.    
 - Fixed bug where calling GetPassword on a membership user when the password answer
   is null would cause an exception (bug #35332)
+- Fixed bug where retrieving passwords that are encrypted was not returning proper
+  passwords (bug #35336)    
     
 Version 5.2.1 - 2/27/2008
 - Tons of fixes in providers.  The actually work now.  :)
